<resources>
    <string name="app_name">Popular Libraries</string>
    <string name="counter_one">Счетчик 1</string>
    <string name="counter_two">Счетчик 2</string>
    <string name="counter_three">Счетчик 3</string>
    <string name="id">Id репозитория</string>
    <string name="rep_name">Имя репозитория</string>
    <string name="fork">Fork</string>
    <string name="user">user</string>
    <string name="user_id">user_id</string>
    <string name="user_name">user_name</string>
    <string name="user_login">user_login</string>
    <string name="user_repos">45</string>
</resources>
